--- a/package.json
+++ b/package.json
@@ -18,12 +18,7 @@
     "localtunnel": "^1.8.2"
   },
   "engines": {
-    "node": ">= 7.7.0",
+    "node": "8",
     "npm": ">= 4.0.0"
-  },
-  "standard": {
-    "env": [
-      "jest"
-    ]
   }
 }
